# LabLink-Core

./: .gitignore  CHANGELOG.md  Makefile  PROJECT_TREE.txt  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app/: app.py  main.py
app/adapters/: base.py  registry.py  vendors.py
app/ai/: __init__.py  engine.py  models.py  provider.py
app/backup/: __init__.py  engine.py  models.py
app/compatibility/: validator.py
app/config/: __init__.py  settings.py
app/connectors/: base.py
app/core/: alerting.py  connection_pool.py  device_manager.py  device_onboarding.py  device_registry.py  modes.py  retry_queue.py
app/desktop/: window.py
app/discovery/: __init__.py  base.py  engine.py  fingerprint.py  recommender.py
app/drivers/: __init__.py  base.py  diagnostics.py  errors.py  health.py  manager.py  recovery.py
app/edge/: agent.py  sync_engine.py
app/emulator/: tcp_device_emulator.py
app/events/: __init__.py  base.py  domain.py
app/integration/: gula_client.py
app/log_config/: setup.py
app/logging/: setup.py
app/middleware/: rate_limit.py  request_metrics.py
app/normalization/: schema.py
app/observability/: __init__.py  metrics.py  tracing.py
app/parsers/: astm_basic.py
app/pipeline/: data_pipeline.py  (+5 more)
docs/: PROJECT_DIRECTOR_PLAN.md
installer/: setup.iss
tests/: conftest.py  test_adapters.py  test_ai.py  test_backup.py  test_config.py  test_desktop_productionization.py  test_device_manager.py  test_device_onboarding.py  test_device_onboarding_api.py  test_discovery.py  test_drivers.py  test_emulator.py  test_event_bus.py  test_normalization.py  test_observability.py  test_observability_enhanced.py  test_parser.py  test_pipeline_astm.py  test_pipeline_phase1.py  test_plugins.py  test_production_hardening.py  test_protocols.py  test_repositories.py  test_routing_and_matching.py  test_security.py  test_services.py  test_services_extended.py  test_sync_and_auth.py  test_sync_engine.py  test_tasks.py  test_tenancy.py  test_vendors.py
(+59 files in other folders)
